switch to sha256 for module signing
Change-Id: I62166df621b46e9d5272fe456df156e73878c429
Signed-off-by: randomhydrosol <randomhydrosol@glassrom.org>

--- a/arch/x86/configs/gki_defconfig
+++ b/arch/x86/configs/gki_defconfig
@@ -89,8 +89,8 @@ CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SCMVERSION=y
-CONFIG_MODULE_SIG=y
 CONFIG_MODULE_SIG_PROTECT=y
+CONFIG_MODULE_SIG_SHA256=y
 CONFIG_BLK_DEV_ZONED=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_CGROUP_IOCOST=y
