--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -1,3 +1,7 @@
+CONFIG_LOCALVERSION="-Realking-V2"
+CONFIG_HZ_250=y
+CONFIG_HZ=250
+CONFIG_POWER_AVS=y	
 CONFIG_UAPI_HEADER_TEST=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
@@ -95,6 +99,7 @@ CONFIG_JUMP_LABEL=y
 CONFIG_SHADOW_CALL_STACK=y
 CONFIG_CFI_CLANG=y
 CONFIG_MODULES=y
+CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SCMVERSION=y
@@ -320,7 +325,8 @@ CONFIG_ARM_SCPI_PROTOCOL=y
 # CONFIG_ARM_SCPI_POWER_DOMAIN is not set
 # CONFIG_EFI_ARMSTUB_DTB_LOADER is not set
 CONFIG_GNSS=y
-CONFIG_ZRAM=m
+CONFIG_ZRAM=y
+CONFIG_ZSMALLOC=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
@@ -737,9 +743,9 @@ CONFIG_PRINTK_TIME=y
 CONFIG_PRINTK_CALLER=y
 CONFIG_DYNAMIC_DEBUG_CORE=y
 CONFIG_DEBUG_INFO_DWARF4=y
-CONFIG_DEBUG_INFO_BTF=y
+CONFIG_DEBUG_INFO_BTF=n
 CONFIG_MODULE_ALLOW_BTF_MISMATCH=y
-CONFIG_HEADERS_INSTALL=y
+CONFIG_HEADERS_INSTALL=n
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_UBSAN=y
