--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -1,7 +1,8 @@
 CONFIG_LOCALVERSION="-Realking-V2"
 CONFIG_HZ_250=y
 CONFIG_HZ=250
-CONFIG_POWER_AVS=y	
+CONFIG_POWER_AVS=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y	
 CONFIG_UAPI_HEADER_TEST=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
